# himlay

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: =0.7.0  =3.3.0  pyproject.toml  requirements.txt  setup.py
backend/src/himlay_api/: __init__.py  chatbot.py  database.py  email_service.py  main.py  models.py
backend/src/himlay_api/common/: prompts.py
backend/src/himlay_api/routes/: booking.py  chat.py  checkout.py
backend/src/himlay_api/utils/: logger.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__generated__/: graphql.ts
frontend/src/api/rest/: client.ts  useChat.ts  usePricingEstimate.ts
frontend/src/authorization/hooks/: index.ts  useCurrentUserIsAuthorized.ts
frontend/src/components/BookConsultation/: BookConsultationPage.tsx
frontend/src/components/Chatbot/: Chatbot.tsx
frontend/src/components/Checkout/: CheckoutPage.tsx
frontend/src/components/Overview/: OverviewPage.tsx
frontend/src/components/Verticals/: AIPage.tsx  BrandingPage.tsx  EcommercePage.tsx  MarketingPage.tsx  OperationsPage.tsx  SaaSPage.tsx
frontend/src/components/shared/: Footer.tsx  Layout.tsx  Modal.tsx  Navbar.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/hooks/: useScrollToHash.ts
frontend/src/types/: pricing.ts
frontend/src/utils/: constants.ts  industryData.ts  pricingData.ts
