[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "himlay_api"
version = "1.0.0"
description = "Himlay Technologies API Backend"
authors = [
    { name = "Himlay Technologies", email = "contact@himlay.com" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "motor>=3.3.1",
    "python-dotenv>=1.0.0",
    "langchain-groq>=0.0.1",
    "langchain-core>=0.1.0",
    "resend>=0.7.0"
]
